--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,15 @@
 </head>
 <body>
   <ltb-root></ltb-root>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-15400461-12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-15400461-12');
+</script>
+
 </body>
 </html>
